# claude-lens

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build.rs
migrations/: 001_initial.sql  002_enhanced_metrics.sql
src/: config.rs  main.rs  server.rs
src/api/: analytics.rs  metrics.rs  mod.rs  sessions.rs
src/otel/: metrics.rs  mod.rs  receiver.rs
src/storage/: mod.rs  sqlite.rs
web/: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: layout.tsx  page.tsx
web/app/analytics/: page.tsx
web/components/charts/: CostProgressRing.tsx  KPICard.tsx  ModelCostChart.tsx  SessionDurationHistogram.tsx  TokenTrendChart.tsx  ToolUsagePie.tsx  UsageHeatmap.tsx  index.ts
web/components/dashboard/: analytics-dashboard.tsx  dashboard.tsx  error-boundary.tsx  metric-card.tsx  metrics-chart.tsx  navigation.tsx  refresh-controls.tsx  sessions-table.tsx  time-range-selector.tsx  tool-usage-chart.tsx
web/components/theme/: theme-toggle.tsx
web/components/ui/: badge.tsx
web/hooks/: use-analytics.ts  use-metrics.ts  use-polling.ts  use-time-range.ts
web/lib/: api.ts  utils.ts
