[package]
name = "claude-lens"
version = "0.1.0"
edition = "2021"
description = "Claude Code analytics and monitoring tool with comprehensive insights dashboard"
authors = ["Claude"]
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
rust-embed = { version = "8.0", features = ["axum"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.9"
tonic-web = "0.9"
tonic-reflection = "0.9"
opentelemetry-proto = { version = "0.4", features = ["gen-tonic-messages", "gen-tonic", "metrics", "trace", "logs"] }
mime_guess = "2.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"
toml = "0.8"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "claude-lens"
path = "src/main.rs"